--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,5 +8,5 @@ author_profile: true
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
-  {% include archive-single-teaching.html %}
+  {% include archive-single-no-link.html %}
 {% endfor %}
