--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
+<h2>Teaching Tutor</h2>
+
 {% for post in site.teaching reversed %}
   {% include archive-single-no-link.html %}
 {% endfor %}
